# Lively_SVO

./: .gitignore
doc/: example_data.txt
rpg_common/: CMakeLists.txt
rqt_svo/: CMakeLists.txt
svo/: CMakeLists.txt  package.xml
svo/include/svo/: frame_handler_base.h  global.h  imu_handler.h  initialization.h  map.h  reprojector.h  stereo_triangulation.h
svo/scripts/: extract_bag_data.py
svo/src/: frame_handler_base.cpp  frame_handler_stereo.cpp  imu_handler.cpp  initialization.cpp  io.cpp  map.cpp  reprojector.cpp  stereo_triangulation.cpp
svo/test/: test_stereo_triangulation.cpp
svo_benchmarking/: CMakeLists.txt
svo_benchmarking/experiments/: exp_euroc_nolc_stereo.yaml
svo_ceres_backend/: CMakeLists.txt
svo_ceres_backend/include/svo/: ceres_backend_interface.hpp  ceres_backend_publisher.hpp  motion_detector.hpp
svo_ceres_backend/include/svo/ceres_backend/: estimator.hpp  estimator_impl.hpp  estimator_types.hpp  map.hpp  reprojection_error_impl.hpp
svo_ceres_backend/src/: ceres_backend_interface.cpp  ceres_backend_publisher.cpp  estimator.cpp  gravity_parameter_block.cpp  imu_error.cpp  map.cpp  pose_error.cpp  pose_local_parameterization.cpp
svo_cmake/cmake/Modules/: SvoSetup.cmake
svo_common/: CMakeLists.txt
svo_common/include/svo/common/: feature_wrapper.h  frame.h  point.h  types.h
svo_common/src/: frame.cpp  point.cpp
svo_direct/: CMakeLists.txt  package.xml
svo_direct/include/svo/direct/: ELSED.h  Utils.h  depth_filter.h  feature_detection.h  feature_detection_types.h  feature_detection_utils.h  matcher.h  patch_utils.h  patch_warp.h
svo_direct/src/: ELSED.cpp  EdgeDrawer.cpp  FullSegmentInfo.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  feature_detection_utils.cpp  matcher.cpp  patch_warp.cpp
svo_direct/test/: test_elsed_derection.cpp  test_lsd_derection.cpp
svo_global_map/: CMakeLists.txt
svo_global_map/include/svo/gtsam/: camera_bearing_extrinsics_factor.h  camera_bearing_factor.h  gtsam_optimizer.h  smart_factors_fwd.h
svo_global_map/src/: global_map.cpp
svo_img_align/: CMakeLists.txt
svo_img_align/include/svo/img_align/: sparse_img_align.h  sparse_img_align_base.h
svo_img_align/src/: sparse_img_align.cpp  sparse_img_align_base.cpp
svo_line/: CMakeLists.txt  package.xml
svo_line/include/svo/line/: auxiliar.h  config.h  descriptor_custom.hpp  gridStructure.h  line_descriptor_custom.hpp  line_match.h  matching.h  precomp_custom.hpp  stereoFeatures.h
svo_line/src/: LSDDetector_custom.cpp  binary_descriptor_custom.cpp  binary_descriptor_matcher.cpp  config.cpp  gridStructure.cpp  line_match.cpp  matching.cpp  stereoFeatures.cpp
svo_msgs/: CMakeLists.txt
svo_online_loopclosing/: CMakeLists.txt
svo_online_loopclosing/src/: loop_closing.cpp
svo_pgo/: CMakeLists.txt
svo_ros/: CMakeLists.txt  package.xml  rviz_config_vio.rviz
svo_ros/include/svo_ros/: svo_interface.h  visualizer.h
svo_ros/launch/: d435i_office_stereo.launch  euroc_vio_stereo.launch
svo_ros/param/: vio_stereo.yaml
svo_ros/param/calib/: realsense_mono.yaml  realsense_stereo_best.yaml  realsense_stereo_equidistant.yaml
svo_ros/src/: svo_factory.cpp  svo_interface.cpp  svo_node_base.cpp  visualizer.cpp
svo_test_utils/: CMakeLists.txt
svo_test_utils/src/: stereo_triangulation_demo.cpp  synthetic_dataset.cpp
svo_tracker/: CMakeLists.txt
svo_tracker/src/: feature_tracker.cpp
svo_vio_common/: CMakeLists.txt
svo_vio_common/include/svo/vio_common/: backend_types.hpp  matrix_operations.hpp
vikit/vikit_cameras/include/vikit/cameras/: camera_geometry_base.h
vikit/vikit_cameras/include/vikit/cameras/implementation/: camera_geometry.hpp  pinhole_projection.hpp
vikit/vikit_cameras/src/: camera_geometry_base.cpp
vikit/vikit_solver/: CMakeLists.txt
vikit/vikit_solver/include/vikit/solver/implementation/: mini_least_squares_solver.hpp
