<?xml version="1.0"?>
<package format="2">
  <name>svo_line</name>
  <description>
    SVO lsd and elsed matching using lbd.
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <author>dgz</author>
  

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roslib</depend>
  <depend>svo_common</depend>
  <depend>svo_test_utils</depend>
  <depend>vikit_ros</depend>
  <depend>vikit_solver</depend>
  <depend>opencv4</depend>
  
  <test_depend>gtest</test_depend>
</package>
